Fix black frames on segment boundaries in H/W decoded h.264 video on windows.

When we detect a segment boundary we reinitialize the decoder. Currently
on Windows that results in tearing down the decoder instance the
D3D9/D3D11 device objects, the output picture buffers etc.

We don't need to tear down the output picture buffers and the d3d device
objects. This fixes the black frame which shows up due to the picture
buffers getting destroyed and new ones getting created.

In any case if the resolution changes we do request new output buffers
anyways.

I tested the test case in bug 594266 which was the reason for the config
change code in the first place. That still works in D3d9 and D3D11.

BUG=616349

Review-Url: https://codereview.chromium.org/2040093002
Cr-Commit-Position: refs/heads/master@{#398226}

Former-commit-id: 5795198277f6c7e1e5871d343c1dbadba1a505d6